# krypt-os

./: .gitignore  Cargo.toml  PROGRESS.md  README.md
.github/workflows/: build-iso.yml
docs/: architecture.md  decisions.md  install.md  known-issues.md  post-install.md  qemu-boot-log.md  testing.md  usb-kill-switch.md
dotfiles/: install.sh
dotfiles/branding/: krypt-launch-screensaver  krypt-screensaver  screensaver.txt
dotfiles/dunst/: dunstrc
dotfiles/foot/: foot.ini  screensaver.ini
dotfiles/grub/krypt-grub/: theme.txt
dotfiles/hypridle/: hypridle.conf
dotfiles/hyprland/: animations.conf  hyprland.conf
dotfiles/hyprlock/: hyprlock.conf
dotfiles/neovim/: init.lua
dotfiles/neovim/lua/config/: autocmds.lua  keymaps.lua  options.lua
dotfiles/neovim/lua/plugins/: colorscheme.lua  lsp.lua  treesitter.lua  ui.lua
dotfiles/plymouth/krypt/: krypt.script
dotfiles/rofi/: krypt-launcher.sh
dotfiles/theme/: colors.conf
dotfiles/waybar/: config.jsonc  krypt-vms.py  style.css
gui-protocol/: Cargo.toml
gui-protocol/src/: input.rs  main.rs  wayland.rs  xen.rs
init/: krypt-boot-agent.service  krypt-daemon.service
initramfs/: krypt-boot-agent.sh
initramfs/hooks/: krypt
initramfs/install/: krypt
installer/: main.py
installer/steps/: __init__.py  disk.py  install.py  luks.py  usb.py  vms.py
krypt-stick/: Cargo.toml
krypt-stick/src/: backup.rs  create.rs  luks.rs  main.rs  revoke.rs
panic/: Cargo.toml  krypt-panic.rs
panic/src/: main.rs
vm-daemon/: Cargo.toml  daemon.toml.example
vm-daemon/src/: config.rs  ipc.rs  main.rs  policy.rs  usb.rs  vm.rs
