[package]
name = "krypt-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "krypt-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tokio-udev = "0.9"
futures = "0.3"
serde_json = "1"

[features]
# Aktiviert IpcClient für externe Crates (krypt-agent, AppVM-Agenten).
# Im krypt-daemon Binary selbst wird IpcClient nicht instantiiert.
agent = []

[dev-dependencies]
tempfile = "3"
